cabal-version:       2.2

name:                hakyll-ede
version:             0.1.0.0
synopsis:            Use ede in Hakyll
-- description:
homepage:            https://github.com/tianyaochou/hakyll-ede#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Tianyao Zhou
maintainer:          example@example.com
copyright:           2024 Tianyao Zhou
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      lib
  exposed-modules:     Hakyll.EDE,
                       Hakyll.EDE.Context
  other-modules:       Helper
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       ede,
                       aeson >= 2.2,
                       bytestring,
                       unordered-containers,
                       text,
                       binary-instances
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/tianyaochou/hakyll-ede
